--- a/activity-monitor/pom.xml
+++ b/activity-monitor/pom.xml
@@ -49,6 +49,14 @@
       <scope>test</scope>
     </dependency>
 
+    <!-- jqwik cho property-based testing -->
+    <dependency>
+      <groupId>net.jqwik</groupId>
+      <artifactId>jqwik</artifactId>
+      <version>1.8.2</version>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 
   <build>
